# facet-kdl

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  serialize.rs
tests/: basic.rs  complex_serialize.rs  debug_deser.rs  minimal_test.rs  serialize_only.rs  simple.rs
